--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -92,6 +92,6 @@ runs:
       env:
         RUNNER: ${{ runner.os == 'Linux' && 'bash -c' || 'powershell -Command' }}
       run: |
-        ./viridian/reef/windivert-bin/windivertctl list
+        Start-Process -FilePath "./viridian/reef/windivert-bin/netdump" -ArgumentList "ip and outbound", "64" -RedirectStandardOutput "./.github/blocklist.txt"
         ${{ env.RUNNER }} "${{ inputs.test-command }}" && true || true
         cat ./.github/blocklist.txt
