--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,6 +127,8 @@ jobs:
         run: |
           try { & curl.exe -sS -I --fail --max-time 15 --local-port 44444 https://1.1.1.1 } catch { Write-Host 'Request failed on Windows!' }
           wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1 || echo 'Request failed on WSL!'"
+          Get-Content "./.github/stdout.txt"
+          Get-Content "./.github/stderr.txt"
 
       - name: Test Viridian Reef PORT (integration) 🧪
         id: test-viridian-reef-port
