--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -122,14 +122,6 @@ jobs:
           higher_port: ${{ env.TARGET_HIGHER_PORT }}
           test-command: ${{ env.TEST }}
 
-      - name: TEST STEP  # TODO: remove!
-        if: runner.os == 'Windows'
-        run: |
-          try { & curl.exe -sS -I --fail --max-time 15 --local-port 44444 https://1.1.1.1 } catch { Write-Host 'Request failed on Windows!' }
-          wsl -u root bash -c "curl -sS -I --fail --max-time 15 https://1.1.1.1 || echo 'Request failed on WSL!'"
-          Get-Content "./.github/stdout.txt"
-          Get-Content "./.github/stderr.txt"
-
       - name: Test Viridian Reef PORT (integration) 🧪
         id: test-viridian-reef-port
         working-directory: viridian/reef
@@ -144,8 +136,6 @@ jobs:
         if: runner.os == 'Windows' && always()
         shell: bash
         run: |
-          echo "LOCAL TRAFFIC:"
-          cat facets.txt
           echo "LOCAL IP ADDRESSES:"
           ipconfig
           echo "WSL IP ADDRESSES:"
@@ -157,9 +147,9 @@ jobs:
           echo "WSL FIREWALL (NAT):"
           wsl -u root iptables -t nat -L -v -n --line-numbers
           echo "SAFE LOGS:"
-          wsl -u root sh -c "cat ./.github/log/safe.log || true"
+          wsl -u root sh -c "cat ./.github/stdout.txt || true"
           echo "DANGER LOGS:"
-          wsl -u root sh -c "cat ./.github/log/danger.log || true"
+          wsl -u root sh -c "cat ./.github/stderr.txt || true"
 
       - name: TEST STEP  # TODO: remove!
         if: runner.os == 'Linux' && always()
