--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,7 +107,7 @@ jobs:
         if: runner.os == 'Windows'
         working-directory: viridian/reef
         shell: bash
-        run: make dependencies
+        run: make dependencies runtime
 
       - name: Test Viridian Reef (unit) 🧪
         working-directory: viridian/reef
