--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -33,6 +33,10 @@ runs:
         distribution: Ubuntu-24.04
         set-as-default: true
 
+    - name: Update CURL (Windows)
+      if: runner.os == 'Windows'
+      run: choco install curl
+
     - name: Install NodeJS 🪢
       uses: actions/setup-node@v4.1.0
       with:
