--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -35,6 +35,7 @@ runs:
 
     - name: Update CURL (Windows)
       if: runner.os == 'Windows'
+      shell: bash
       run: choco install curl
 
     - name: Install NodeJS 🪢
