--- a/viridian/reef/Cargo.toml
+++ b/viridian/reef/Cargo.toml
@@ -37,6 +37,7 @@ iptables = "^0.5.1"
 neli = "^0.6.4"
 
 [target.'cfg(target_os = "windows")'.dependencies]
+etherparse = "^0.18.0"
 serde = "^1.0.219"
 windivert = "^0.6.0"
 windows = { version = "^0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
