--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -62,6 +62,24 @@ jobs:
         working-directory: viridian/algae
         run: poetry poe lint
 
+  viridian-reef-lint:
+    name: Lint Viridian Reef Client
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v4
+
+      - name: Setup Rust 🦀
+        uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: stable
+          cache-workspaces: viridian/reef
+
+      - name: Lint Viridian Reef 🧪
+        working-directory: viridian/reef
+        run: make lint
+
   caerulean-whirlpool-lint:
     name: Lint Caerulean Whirlpool Server
     runs-on: ubuntu-latest
@@ -69,6 +87,11 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+
+      - name: Setup Go 1.23 🦫
+        uses: actions/setup-go@v5
+        with:
+          go-version: "^1.23.0"
 
       - name: Install Dependencies 🔮
         working-directory: caerulean/whirlpool
