--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,8 @@ name: LINT
 
 on:
   push:
+    branches:
+      - "**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -27,7 +29,7 @@ jobs:
       - name: Install Dependencies 🔮
         run: pip3 install codespell
 
-      - name: Lint Markdown Files 👇
+      - name: Lint Spelling ✅
         run: make lint-spelling
 
   scripts-lint:
