--- a/viridian/algae/docker/test.conf.env
+++ b/viridian/algae/docker/test.conf.env
@@ -1,17 +1,15 @@
-SEASIDE_PRIVATE_KEY=LLFLPRfCNNCe21xZKIUvZuwB7iaN18/szKNrCAbBAaHGfN32cZlSog==
-SEASIDE_SERVER_KEY=c2VjcmV0IGVuY29kZWQgYmFzZTY0IHNlcnZlciBrZXk=
+# See other environment files for description of the variables defined below:
+# - Viridian Algae environment: ../example.conf.env
+# - Caerulean Whirlpool environment: ../../../caerulean/whirlpool/example.conf.env
 
-# Caerulean owner payload, provides access to privileged authorization
+SEASIDE_PRIVATE_KEY=THISISASAMPLESEASIDEVPNPRIVATESERVERKEYUSEFORTESTSONLY==
+SEASIDE_SERVER_KEY=ITSASAMPLESEASIDEVPNSERVERKEYUSEFORTESTONLY=
+
 SEASIDE_API_KEY_OWNER=super_secret_owner_payload_data
-# Caerulean user payload, provides access to network authorization
 SEASIDE_API_KEY_ADMIN=super_secret_admin_payload_data
 
 SEASIDE_SUGGESTED_DNS=0.0.0.0
-
-# Whirlpool net port
 SEASIDE_API_PORT=8587
-
-# Logging level for all seaside nodes
 SEASIDE_LOG_LEVEL=DEBUG
 
 # Buffer for echo server message storing
