--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
           target: ${{ env.TARGET }}
           override: true
 
-      - name: Download Dependencies
+      - name: Download Dependencies 🔮
         if: runner.os == 'Windows'
         working-directory: viridian/reef
         shell: bash
