--- a/viridian/algae/example.conf.env
+++ b/viridian/algae/example.conf.env
@@ -16,8 +16,8 @@ SEASIDE_TUNNEL_NETMASK=255.255.255.0
 SEASIDE_TUNNEL_SVA=65
 # All of the constants above are used in the simple client
 
-# Root certificate authority file name: will be used for API calls
-SEASIDE_ROOT_CERTIFICATE_AUTHORITY=cert/CA.cert
+# Root certificate authority path, with client certificates (cert.crt, cert.key) and CA (rootCA.crt, optional): will be used for API calls
+SEASIDE_CERTIFICATE_PATH=cert/
 # Path of the system resolv configuration file: will be used in the simple client
 SEASIDE_RESOLV_CONF_PATH=/etc/resolv.conf
 
