--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,26 +1,29 @@
 name: PUBLISH
 
 on:
+  workflow_dispatch:
   push:
+    branches:
+      - main
     tags:
       - "**"
 
 jobs:
   all-build:
     name: Build All Artifacts
+    if: startsWith(github.ref, 'refs/tags')
     uses: ./.github/workflows/build.yml
     secrets: inherit
     concurrency:
       group: BUILD-${{ github.ref }}
-      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
   all-release-publish:
     name: Create Release For All Files
+    if: startsWith(github.ref, 'refs/tags')
     runs-on: ubuntu-latest
     needs: all-build
     concurrency:
       group: PUBLISH-${{ github.ref }}
-      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
     permissions:
       contents: write
       pull-requests: write
@@ -72,7 +75,6 @@ jobs:
     needs: all-release-publish
     concurrency:
       group: DEPLOY-${{ github.ref }}
-      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
     steps:
       - name: Checkout 🛎️
@@ -101,8 +103,8 @@ jobs:
       - name: Deploy Caerulean Whirlpool 🚀
         working-directory: .github/scripts
         env:
-          BEGET_API_LOGIN: ${{ secrets.BEGET_API_LOGIN }}
-          BEGET_API_PASSWORD: ${{ secrets.BEGET_API_PASSWORD }}
-          BEGET_SERVER_KEY: ${{ secrets.BEGET_SERVER_KEY }}
-          WHIRLPOOL_PAYLOAD: ${{ secrets.WHIRLPOOL_DEPLOYMENT_PAYLOAD }}
-        run: npm run deploy-whirlpool-beget -- -v
+          SERVAONE_API_EMAIL: ${{ secrets.SERVAONE_API_EMAIL }}
+          SERVAONE_API_TOKEN: ${{ secrets.SERVAONE_API_TOKEN }}
+          SERVAONE_SERVER_PASSWORD: ${{ secrets.SERVAONE_SERVER_PASSWORD }}
+          SERVAONE_SERVER_KEY: ${{ secrets.SERVAONE_SERVER_KEY }}
+        run: npm run deploy-whirlpool-servaone -- -v
