--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -33,22 +33,22 @@ runs:
         distribution: Ubuntu-24.04
         set-as-default: true
 
-    - name: Install NodeJS 🪢
+    - name: Install NodeJS
       uses: actions/setup-node@v4.1.0
       with:
         node-version: 22
 
-    - name: Install Node Dependencies 🔮
+    - name: Install Node Dependencies
       working-directory: .github
       shell: bash
       run: npm install > /dev/null 2>&1
 
-    - name: Setup Python 3.11 🐍
+    - name: Setup Python 3.11
       uses: actions/setup-python@v5
       with:
         python-version: "3.11"
 
-    - name: Install Dependencies 🔮
+    - name: Install Dependencies
       working-directory: viridian/algae
       shell: bash
       run: |
