--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -81,7 +81,7 @@ runs:
       shell: bash
       env:
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
-      run: ls && ls certificates && ls ${{ env.SEASIDE_CERTIFICATE_PATH }} && ls certificates/caerulean
+      run: ls && ls certificates && ls ${{ env.SEASIDE_CERTIFICATE_PATH }} && ls certificates/caerulean && ls ../../.github
 
     - name: Get Connection Link
       id: get-server-connection-link
@@ -94,7 +94,7 @@ runs:
         SEASIDE_ADDRESS: ${{ steps.start-background-server.outputs.server-ip }}
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
       run: |
-        poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian
+        poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian || cat ../../.github/logs/safe.log && cat ../../.github/logs/danger.log
         echo "connection-link=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)" >> $GITHUB_OUTPUT
 
     - name: Test Echo Server Access (no VPN)
