--- a/.github/actions/setup-server/action.yml
+++ b/.github/actions/setup-server/action.yml
@@ -76,26 +76,15 @@ runs:
         SUDO: ${{ runner.os == 'Linux' && 'sudo -E env "PATH=$PATH"' || '' }}
       run: echo "server-ip=$(${{ env.SUDO }} node actions/setup-server/configure_viridian_test.mjs -l ${{ inputs.lower_port }} -h ${{ inputs.higher_port }} -t ${{ steps.resolve-target.outputs.target-ip }} -s)" >> $GITHUB_OUTPUT
 
-    - name: Check Certificates
-      working-directory: viridian/algae
-      shell: bash
-      env:
-        SEASIDE_CERTIFICATE_PATH: certificates/viridian
-      run: ls && ls certificates && ls ${{ env.SEASIDE_CERTIFICATE_PATH }} && ls certificates/caerulean && ls ../../.github
-
     - name: Get Connection Link
       id: get-server-connection-link
       working-directory: viridian/algae
       shell: bash
       env:
-        GRPC_VERBOSITY: debug
-        GRPC_TRACE: ssl
-        SEASIDE_LOG_LEVEL: DEBUG
         SEASIDE_ADDRESS: ${{ steps.start-background-server.outputs.server-ip }}
         SEASIDE_CERTIFICATE_PATH: certificates/viridian
-      run: |
-        poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian || cat ../../.github/log/safe.log && cat ../../.github/log/danger.log
-        echo "connection-link=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)" >> $GITHUB_OUTPUT
+        SEASIDE_LOG_LEVEL: ERROR
+      run: echo "connection-link=$(poetry poe -q fixture -a "${{ env.SEASIDE_ADDRESS }}" -p "${{ env.SEASIDE_API_PORT }}" -k "${{ env.SEASIDE_API_KEY_ADMIN }}" supply-viridian -s)" >> $GITHUB_OUTPUT
 
     - name: Test Echo Server Access (no VPN)
       if: ${{ inputs.test-command != '' }}
