Poetry command was deleted by accident - and now it's restored!

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -94,7 +94,7 @@ jobs:
         working-directory: viridian/algae
         run: |
           pip3 install poetry
-          poetry --extras "bundle"
+          poetry install --extras "bundle"
 
       - name: Deploy Caerulean Whirlpool 🚀
         working-directory: .github/scripts
