--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -94,7 +94,7 @@ jobs:
         working-directory: viridian/algae
         run: |
           pip3 install poetry
-          poetry install --extras "bundle"
+          poetry install --extras "bundle setup"
 
       - name: Deploy Caerulean Whirlpool 🚀
         working-directory: .github/scripts
