--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
           workflow: publish.yml
           run_id: ${{ github.run_id }}
           allow_forks: false
-          name: algae-executable-.+
+          name: viridian-algae-executable-.+
           name_is_regexp: true
 
       - name: Download Caerulean Whirlpool Artifact 🌌
@@ -43,7 +43,7 @@ jobs:
           workflow: publish.yml
           run_id: ${{ github.run_id }}
           allow_forks: false
-          name: whirlpool-executable-.+
+          name: caerulean-whirlpool-executable-.+
           name_is_regexp: true
 
       - name: Download Viridian Reef Artifact 🪸
@@ -52,7 +52,7 @@ jobs:
           workflow: publish.yml
           run_id: ${{ github.run_id }}
           allow_forks: false
-          name: reef-executable-.+
+          name: viridian-reef-executable-.+
           name_is_regexp: true
 
       - name: Create Release 🪅
